--- a/css/styles.css
+++ b/css/styles.css
@@ -4,32 +4,79 @@
     --primario: #ffc107;
     --secundario: #0097a7;
     --gris: #757575;
+    --grisClaro: #dfe9f3;
 
     --fuente-principal: 3.8rem;
 }
 
-
+/*Globales*/
 html{
     font-size: 62.5%;
+    box-sizing: border-box;
 }
+
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
 
 body{
     font-size: 16px;
     font-family: 'Krub', sans-serif;
-}
-
-.titulo{
-    text-align: center;
-    font-size: 3.8rem;   
-}
-
-.titulo span{
-    font-size: 2rem;
+    background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100% );
 }
 
 .contenedor{
     max-width: 120rem;
     margin: 0 auto;
+}
+
+.boton{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 10px 30px;
+    margin-top: 10px;
+    font-size: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: 5px;
+    width: 80%;
+    text-align: center;
+}
+
+@media (min-width: 480px) {
+    .boton{
+        width: auto;
+    }
+  
+}
+
+.sombra{
+    webkit-box-shadow: 0px 5px 15px 0px rgba(59,56,59,0.54);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(59,56,59,0.54);
+    box-shadow: 0px 5px 15px 0px rgba(59,56,59,0.54);
+    background-color: var(--blanco);
+    padding: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+}
+
+/* Tipografia */
+
+h1{
+    font-size: 3.8rem;  /*1rem = 10px */
+}
+
+h2{
+    font-size: 2.8rem;
+}
+
+h3{ 
+    font-size: 1.8rem;
+}
+
+h1, h2, h3{
+    text-align: center;
 }
 
 .nav-bg{
@@ -68,6 +115,100 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     height: 45rem;
-    padding: 20px;
+    position: relative;
 }
 
+.contenido-hero{
+    position: absolute;
+    background-color: rgba(0,0,0,0.5); /* anterior */
+    background-color: rgb( 0 0 0 / 50%);
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenido-hero h2,
+.contenido-hero p{
+    color: var(--blanco);
+}
+
+.ubicacion{
+    display: flex;
+    align-items: flex-end;
+}
+
+/* Servicios */
+
+@media (min-width: 768px) {
+    .servicios{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /*Repite 3 veces 1f o 1 fraccion*/
+        column-gap: 1rem;   /* separacion entre columnas*/
+    }
+}
+
+.servicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.servicio h3{
+    color: var(--secundario);
+    font-weight: 400;
+    text-align: center;
+}
+
+.servicio p{
+    line-height: 2; /*interlineado*/
+}
+
+.servicio .iconos{
+    height: 10rem;
+    width: 10rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/*Contacto*/
+
+.formulario{
+    background-color: var(--gris);
+    width: min( 60rem, 100% ); /* Utilizar el valor más pequeño */
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset{
+    border: none;
+}
+
+.formulario legend{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+
+.contenedor-campos{
+
+}
+
+.campo{
+
+}
+
+-campo label{
+    color: var(--blanco);
+}
