--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: Y mandatory;
 }
 
 *, *:before, *:after {
@@ -40,8 +41,9 @@ body{
     text-transform: uppercase;
     font-weight: 700;
     border-radius: 5px;
-    width: 80%;
+    width: 90%;
     text-align: center;
+    border: none;
 }
 
 @media (min-width: 480px) {
@@ -49,6 +51,10 @@ body{
         width: auto;
     }
   
+}
+
+.boton:hover{
+    cursor: pointer;
 }
 
 .sombra{
@@ -78,6 +84,31 @@ h3{
 h1, h2, h3{
     text-align: center;
 }
+
+/*Titulos*/
+.titulo span {
+    font-size: 2rem;
+}
+/* Utilidades */
+.w-sm-100{
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .w-sm-100{
+        width: auto;
+    }
+}
+
+.flex{
+    display: flex;
+}
+
+.alinear-derecha{
+    justify-content: flex-end;
+}
+
+/*Navegación Principal*/
 
 .nav-bg{
     background-color: var(--secundario);
@@ -141,6 +172,14 @@ h1, h2, h3{
     align-items: flex-end;
 }
 
+/** Scroll Snap **/
+.servicios,
+.navegacion-principal,
+.formulario{
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
 /* Servicios */
 
 @media (min-width: 768px) {
@@ -201,14 +240,43 @@ h1, h2, h3{
     color: var(--primario);
 }
 
-.contenedor-campos{
+@media (min-width: 768px) {
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
 
+    .campo:nth-child(3),
+    .campo:nth-child(4){
+        grid-column: 1 / 3;
+    }
 }
 
 .campo{
-
+    margin-bottom: 1rem;
 }
 
--campo label{
+.campo label{
     color: var(--blanco);
+    font-weight: 700;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.campo textarea{
+    height: 17rem;
+}
+
+.input-text{
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+/** Footer **/
+.footer{
+    text-align: center;
 }
